# FitnessClassBookingSystem

./: .env  .env.example  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/classes/: admin.py  filters.py  urls.py
src/classes/management/commands/: create_fake_bookings.py  create_fake_class_data.py  create_fake_classes.py
src/classes/migrations/: 0001_initial.py  0002_initial.py  0003_remove_fitnessclass_description_and_more.py  0004_booking.py
src/classes/models/: __init__.py  booking.py  class_type.py  fitness_class.py  level.py
src/classes/serializers/: __init__.py  booking.py  class_types.py  fitness_classes.py  levels.py
src/classes/services/: __init__.py  email_service.py
src/classes/views/: __init__.py  booking.py  class_types.py  fitness_classes.py  levels.py
src/fitness/: asgi.py  settings.py  urls.py  wsgi.py
src/fitness/management/commands/: create_fake_data.py
src/instructors/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
src/instructors/migrations/: 0001_initial.py  0002_initial.py
src/templates/emails/: booking_cancellation.html  booking_confirmation.html  class_reminder.html
src/users/: admin.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_remove_user_is_verified.py  0003_fitnessprofile.py
src/users/models/: __init__.py  fitness_profile.py  users.py
src/users/serializers/: __init__.py  fitness_profile.py  users.py
src/users/services/: __init__.py  llm_service.py
src/users/views/: __init__.py  fitness_profile.py  users.py
(+2 files in other folders)
